--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-      "react": "^0.14.7",
-      "react-dom": "^0.14.7"
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-router": "^2.0.0-rc5"
   },
   "devDependencies": {
-      "babel-core": "^6.4.5",
-      "babel-loader": "^6.2.1",
-      "babel-preset-react": "^6.3.13",
-      "html-webpack-plugin": "^2.7.2",
-      "webpack": "^1.12.12",
-      "webpack-dev-server": "^1.14.1"
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
+    "babel-preset-react": "^6.3.13",
+    "html-webpack-plugin": "^2.7.2",
+    "webpack": "^1.12.12",
+    "webpack-dev-server": "^1.14.1"
   }
 }
