--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "react": "^0.14.7",
+    "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.0-rc5"
   },
@@ -19,7 +20,9 @@
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
     "babel-preset-react": "^6.3.13",
+    "css-loader": "^0.26.1",
     "html-webpack-plugin": "^2.7.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1"
   }
